Fixes #RHINENG-7893 - accept and serve boxplots
