# openapi.json
@@ -404,6 +404,9 @@
                 "$ref": "#/components/schemas/PerformanceRecommendation"
               }
             }
+          },
+          "plots":{
+            "$ref": "#/components/schemas/PlotsData"
           }
         }
       },
@@ -429,6 +432,9 @@
                 "$ref": "#/components/schemas/PerformanceRecommendation"
               }
             }
+          },
+          "plots":{
+            "$ref":"#/components/schemas/PlotsData"
           }
         }
       },
@@ -454,6 +460,9 @@
                 "$ref": "#/components/schemas/PerformanceRecommendation"
               }
             }
+          },
+          "plots":{
+            "$ref": "#/components/schemas/PlotsData"
           }
         }
       },
@@ -485,11 +494,11 @@
                     "properties": {
                       "amount": {
                         "type": "number",
-                        "example": 6.7
+                        "example": 6700
                       },
                       "format": {
                         "type": "string",
-                        "example": "Gi"
+                        "example": "Mi"
                       }
                     }
                   }
@@ -558,11 +567,11 @@
                     "properties": {
                       "amount": {
                         "type": "number",
-                        "example": 1.7
+                        "example": 1700
                       },
                       "format": {
                         "type": "string",
-                        "example": "Gi"
+                        "example": "Mi"
                       }
                     }
                   }
@@ -622,7 +631,8 @@
                       },
                       "format": {
                         "type": "string",
-                        "example": "millicores"
+                        "example": null,
+                        "nullable": true
                       }
                     }
                   },
@@ -663,11 +673,11 @@
                     "properties": {
                       "amount": {
                         "type": "number",
-                        "example": 6
+                        "example": 6000
                       },
                       "format": {
                         "type": "string",
-                        "example": "Gi"
+                        "example": "Mi"
                       }
                     }
                   }
@@ -736,11 +746,11 @@
                     "properties": {
                       "amount": {
                         "type": "number",
-                        "example": 1
+                        "example": 1056
                       },
                       "format": {
                         "type": "string",
-                        "example": "Gi"
+                        "example": "Mi"
                       }
                     }
                   }
@@ -982,7 +992,7 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 3.995
+                                    "example": 3000
                                   },
                                   "format": {
                                     "type": "string",
@@ -1078,11 +1088,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 5
+                                    "example": 5000
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1105,7 +1115,8 @@
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "millicores"
+                                    "example": null,
+                                    "nullable": true
                                   }
                                 }
                               },
@@ -1146,11 +1157,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 6
+                                    "example": 6000
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1215,11 +1226,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 1
+                                    "example": 1000
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1279,11 +1290,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 5
+                                    "example": 550
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1348,11 +1359,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 6.7
+                                    "example": 6700
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1417,11 +1428,11 @@
                                 "properties": {
                                   "amount": {
                                     "type": "number",
-                                    "example": 1.7
+                                    "example": 1500
                                   },
                                   "format": {
                                     "type": "string",
-                                    "example": "Gi"
+                                    "example": "Mi"
                                   }
                                 }
                               }
@@ -1502,6 +1513,126 @@
             "example": "deploymentconfig"
           }
         }
+      },
+      "PlotsData":{
+        "type": "object",
+        "properties":{
+          "datapoints":{
+            "type": "integer",
+            "example": 4
+          },
+        "plots_data":{
+          "$ref": "#/components/schemas/PlotDetails"
+          }
+        }
+      },
+      "PlotDetails": {
+        "type": "object",
+        "properties":{
+          "2023-04-01T06:00:00Z":{
+            "type": "object",
+            "properties":{
+              "cpuUsage":{
+                "$ref": "#/components/schemas/cpuUsage"
+              },
+              "memoryUsage":{
+                "$ref":"#/components/schemas/memoryUsage"
+              }
+            }
+          },
+          "2023-04-01T12:00:00Z":{
+            "type": "object",
+            "properties":{
+              "cpuUsage":{
+                "$ref": "#/components/schemas/cpuUsage"
+              },
+              "memoryUsage":{
+                "$ref":"#/components/schemas/memoryUsage"
+              }
+            }
+          },
+          "2023-04-01T18:00:00Z":{
+            "type": "object",
+            "properties":{
+              "cpuUsage":{
+                "$ref": "#/components/schemas/cpuUsage"
+              },
+              "memoryUsage":{
+                "$ref":"#/components/schemas/memoryUsage"
+              }
+            }
+          },
+          "2023-04-02T00:00:00Z":{
+            "type": "object",
+            "properties":{
+              "cpuUsage":{
+                "$ref": "#/components/schemas/cpuUsage"
+              },
+              "memoryUsage":{
+                "$ref":"#/components/schemas/memoryUsage"
+              }
+            }
+          }
+        }
+      },
+      "cpuUsage": {
+        "type": "object",
+        "properties":{
+          "format":{
+            "type": "string",
+            "example": null,
+            "nullable": true
+          },
+          "max":{
+            "$ref": "#/components/schemas/cpuUsageFloatComponent"
+          },
+          "median":{
+            "$ref": "#/components/schemas/cpuUsageFloatComponent"
+          },
+          "min":{
+            "$ref": "#/components/schemas/cpuUsageFloatComponent"
+          },
+          "q1":{
+            "$ref": "#/components/schemas/cpuUsageFloatComponent"
+          },
+          "q3":{
+            "$ref": "#/components/schemas/cpuUsageFloatComponent"
+          }
+        }
+      },
+      "memoryUsage":{
+        "type": "object",
+        "properties":{
+          "format":{
+            "type": "string",
+            "example": "Mi"
+          },
+          "max":{
+            "$ref": "#/components/schemas/memoryUsageFloatComponent"
+          },
+          "median":{
+            "$ref": "#/components/schemas/memoryUsageFloatComponent"
+          },
+          "min":{
+            "$ref": "#/components/schemas/memoryUsageFloatComponent"
+          },
+          "q1":{
+            "$ref": "#/components/schemas/memoryUsageFloatComponent"
+          },
+          "q3":{
+            "$ref": "#/components/schemas/memoryUsageFloatComponent"
+          }
+        }
+      },
+      "cpuUsageFloatComponent":{
+        "type": "number",
+        "example": 0.05,
+        "format": "float"
+      },
+      "memoryUsageFloatComponent":{
+        "type": "number",
+        "example": 238.2,
+        "format": "float"
       }
     }
   }
